compiler/testData/diagnostics/tests/inference/kt51068.fir.kt
// WITH_STDLIB

fun main() {
    listOf<suspend (Int) -> Int>(<!ARGUMENT_TYPE_MISMATCH!>{ x: Int -> x * x }<!>) //error
}